Adding copyright notice

--- a/simple.html
+++ b/simple.html
@@ -1,4 +1,7 @@
 <!DOCTYPE html>
+<!--
+	This is the copyright section: do not steal stuff or I will find you
+-->
 <head>
 	<title>An Example Website Full Of Wonder</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
