--- a/simple.html
+++ b/simple.html
@@ -3,7 +3,7 @@
 	This is the copyright section: do not steal stuff or I will find you
 -->
 <head>
-	<title>An Example Website Full Of Wonder</title>
+	<title>Slightly Less Awesome Title</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
@@ -17,11 +17,11 @@
 	<main class="container">
 	<!-- Content Goes Here -->
 		<p>
-			Just some content
+			Regular old content goes here
 		</p>
 	</main>
 	<footer class="container">
-		<p>&copy; Company 2014</p>
+		<p>&copy; Normal Boring Company 2014</p>
 	</footer>
 </body>
 </html>
