md before rebase conflicts

--- a/simple.html
+++ b/simple.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <!--
 	This is the copyright section: do not steal stuff or I will find you
+	I am justice
 -->
 <head>
 	<title>Most Amazing Title In The World</title>
