fb adding trouble to simple.html

--- a/simple.html
+++ b/simple.html
@@ -4,7 +4,7 @@
 	I am justice
 -->
 <head>
-	<title>Nothing To See Here</title>
+	<title>Gotham Is My City</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
@@ -18,11 +18,11 @@
 	<main class="container">
 	<!-- Junk filler stuff -->
 		<p>
-			*Content Stole*
+			I am Batman
 		</p>
 	</main>
 	<footer class="container">
-		<p>&copy; Joker Inc</p>
+		<p>&copy; Banner Company</p>
 	</footer>
 </body>
 </html>
