mb conflict changes brewing

--- a/simple.html
+++ b/simple.html
@@ -4,7 +4,7 @@
 	I am justice
 -->
 <head>
-	<title>Most Amazing Title In The World</title>
+	<title>Nothing To See Here</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
@@ -16,13 +16,13 @@
 </head>
 <body>
 	<main class="container">
-	<!-- Content Goes Here -->
+	<!-- Junk filler stuff -->
 		<p>
-			Just some content
+			*Content Stole*
 		</p>
 	</main>
 	<footer class="container">
-		<p>&copy; S4 Company 2023</p>
+		<p>&copy; Joker Inc</p>
 	</footer>
 </body>
 </html>
