local: updating simple.html

--- a/simple.html
+++ b/simple.html
@@ -21,7 +21,7 @@
 		</p>
 	</main>
 	<footer class="container">
-		<p>&copy; Banner Company</p>
+		<p>&copy; Not Banner Company AnyMore</p>
 	</footer>
 </body>
 </html>
