Done with simple.html updates

--- a/simple.html
+++ b/simple.html
@@ -3,7 +3,7 @@
 	This is the copyright section: do not steal stuff or I will find you
 -->
 <head>
-	<title>Gotham Is My City</title>
+	<title>Brand Spanking New Title</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
